Fixed spacing in .css and editted some writing

--- a/src/components/Projects/ProjectsIntro.css
+++ b/src/components/Projects/ProjectsIntro.css
@@ -1,5 +1,5 @@
 .projects-intro {
-  padding: 4rem;
+  padding: 0rem;
   background: #fff;
 }
 
